--- a/app/src/main/res/layout/activity_update_week.xml
+++ b/app/src/main/res/layout/activity_update_week.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/general"
-    tools:context=".MyFisrtApp.AddWeekActivity">
+    tools:context=".MyFisrtApp.UpdateActivityWeek">
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etTaskName"
@@ -51,7 +50,7 @@
         android:id="@+id/btnConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Confirmar"
+        android:text="Actualizar"
         android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -72,6 +71,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calendarToday"
         app:layout_constraintVertical_bias="0.692" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
