--- a/app/src/main/res/drawable/general.xml
+++ b/app/src/main/res/drawable/general.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="225"
-        android:centerColor="#F34E55"
-        android:endColor="#000000"
-        android:startColor="#FFFFFF" />
+        android:centerColor="#C45AF3"
+        android:endColor="#482CEA"
+        android:startColor="#4CB5E3" />
 
 </shape>
