--- a/app/src/main/res/layout/activity_add_week.xml
+++ b/app/src/main/res/layout/activity_add_week.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login"
-    android:theme="@style/ThemeOverlay.Material3.MaterialCalendar"
+    android:background="@drawable/general"
     tools:context=".MyFisrtApp.AddWeekActivity">
 
 
